[package]
name = "mit"
version = "0.1.4"
edition = "2021"
description = "MIT license generator"
license = "MIT"
documentation = "https://docs.rs/mit"
readme = "README.md"
repository = "https://github.com/btwiuse/mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mit"
path = "main.rs"

[lib]
name = "mit"
path = "lib.rs"

[dependencies]
handlebars = "4.2"
chrono = "0.4"
clap = { version = "3.0", features = ["derive"] }
